(fix) screen space overflow bug.

--- a/client/src/styles/app.scss
+++ b/client/src/styles/app.scss
@@ -12,13 +12,14 @@ body {
   background: border-box $bkgColor2;
   user-select: none;
   align-items: flex-start;
+  max-width: 99vw;
 }
 
 textarea {
   border: none;
   margin: 5vw 1vw 1vw 0vw;
   height: 120px;
-  min-width: 100%;
+  min-width: 99vw;
   background-color: white;
   font-size: 4vh;
   font-weight: bold;
@@ -55,7 +56,7 @@ form {
 
 #cipher-input-container {
   position: absolute;
-  bottom: 0;
+  bottom: -2vw;
   // width: 100vw;
   right: 0;
   left: 0;
@@ -109,10 +110,12 @@ form {
 
 // Standard button styles
 #input-btn-container {
-  display: flex;
-  justify-content: center;
+  position: absolute;
+  left: 40%;
+  top: 85%;
   margin-top: 10%;
-  transform: scale(2);
+  transform: scale(1.5);
+  overflow: hidden;
 }
 #standard-btn {
   // background-color: black;
@@ -120,9 +123,10 @@ form {
   border-radius: 3vw 3vw 3vw 3vw;
   border: none;
   font-size: 2vh;
-  width: 13vh;
+  width: 14vh;
   height: 5vh;
   font-weight: bold;
+  overflow: hidden;
   font-family: sans-serif;
   // color: white;
 }
@@ -139,6 +143,7 @@ form {
   -webkit-box-shadow: 0 8px 6px -6px black;
   -moz-box-shadow: 0 8px 6px -6px black;
   box-shadow: 0 8px 6px -6px black;
+  overflow: hidden;
 }
 
  // Level selectors & styles.
@@ -289,8 +294,8 @@ form {
   position: absolute;
   left: 0;
   top: 0;
-  width: 100vw;
-  height: 100vh;
+  width: 101vw;
+  height: 101vh;
   z-index: 1;
 }
 
